--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,17 +27,6 @@ jobs:
         echo "Tag: $TAG_NAME"
         echo "Commit: $GITHUB_SHA"
 
-    - name: Create GitHub Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.tag_info.outputs.tag_name }}
-        release_name: Release ${{ steps.tag_info.outputs.tag_name }}
-        draft: false
-        prerelease: false
-
     - name: Setup build environment
       run: |
         echo "Setting up macOS build environment..."
@@ -94,12 +83,14 @@ jobs:
         echo "archive_name=$ARCHIVE_NAME" >> $GITHUB_OUTPUT
         echo "Component archived and signed as: $ARCHIVE_NAME"
 
-    - name: Upload release asset
-      uses: actions/upload-release-asset@v1
+    - name: Create GitHub Release
+      id: create_release
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ steps.archive_component.outputs.archive_name }}
-        asset_name: ${{ steps.archive_component.outputs.archive_name }}
-        asset_content_type: application/zip
+        tag_name: ${{ steps.tag_info.outputs.tag_name }}
+        name: Release ${{ steps.tag_info.outputs.tag_name }}
+        draft: false
+        prerelease: false
+        files: ${{ steps.archive_component.outputs.archive_name }}
