Update archive naming in release workflow
The archive generated during the release workflow is now named using only the repository name, removing the tag name from the filename.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
         
         # Get repository name from GITHUB_REPOSITORY (owner/repo)
         REPO_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
-        ARCHIVE_NAME="${REPO_NAME}-${{ steps.tag_info.outputs.tag_name }}.zip"
+        ARCHIVE_NAME="${REPO_NAME}.zip"
         
         # Exemple de commandes (à adapter)
         # zip -r $ARCHIVE_NAME <component-folder>
