--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,10 @@ name: Release
 on:
   push:
     tags:
-      - '*'
+      - '[0-9]+.[0-9]+'          # Matches tags like 21.3
+      - '[0-9]+R[0-9]+.[0-9]+'   # Matches tags like 21R2.4
+      - '[0-9]+R[0-9]+'          # Matches tags like 21R2
+      - '[0-9]+.[0-9]+.[0-9]+'   # Matches tags like 21.3.1
 
 jobs:
   build-and-release:
