--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ name: Release
 on:
   push:
     tags:
+      - 'main.[0-9]+'          # Matches tags like 21.3
       - '[0-9]+.[0-9]+'          # Matches tags like 21.3
       - '[0-9]+R[0-9]+.[0-9]+'   # Matches tags like 21R2.4
       - '[0-9]+R[0-9]+'          # Matches tags like 21R2
